# sample-cmake-opencv

./: CMakeLists.txt  main.cpp
